--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -19,12 +19,16 @@
     "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
     "expo-constants": "^13.0.2",
+    "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
+    "expo-task-manager": "~10.1.0",
     "expo-updates": "^0.11.6",
     "graphql": "^16.3.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-maps": "0.29.4",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.12.0",
     "react-native-ratings": "^8.1.0",
@@ -34,9 +38,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
-    "react-native-youtube-iframe": "^2.2.2",
-    "react-native-maps": "0.29.4",
-    "expo-location": "~14.0.1"
+    "react-native-youtube-iframe": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
