--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
     "expo-constants": "^13.0.2",
+    "expo-dev-client": "~0.8.4",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
     "expo-task-manager": "~10.1.0",
@@ -27,6 +28,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-date-picker": "^4.2.0",
     "react-native-maps": "0.29.4",
     "react-native-maps-directions": "^1.8.0",
     "react-native-pager-view": "^5.4.9",
