--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -38,7 +38,8 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
-    "react-native-youtube-iframe": "^2.2.2"
+    "react-native-youtube-iframe": "^2.2.2",
+    "expo-local-authentication": "~12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
