--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -1,17 +1,17 @@
 {
   "name": "client-mobile",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@expo/vector-icons": "^12.0.5",
+    "@react-native-community/datetimepicker": "4.0.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
@@ -21,6 +21,7 @@
     "expo-constants": "^13.0.2",
     "expo-dev-client": "~0.8.4",
     "expo-location": "~14.0.1",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-task-manager": "~10.1.0",
     "expo-updates": "^0.11.6",
@@ -29,6 +30,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-date-picker": "^4.2.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-maps": "0.29.4",
     "react-native-maps-directions": "^1.8.0",
     "react-native-pager-view": "^5.4.9",
