--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -31,6 +31,7 @@
     "react-native": "0.64.3",
     "react-native-date-picker": "^4.2.0",
     "react-native-datepicker": "^1.7.2",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-maps": "0.29.4",
     "react-native-maps-directions": "^1.8.0",
     "react-native-pager-view": "^5.4.9",
