--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -17,9 +17,11 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "@react-navigation/stack": "^6.2.1",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-constants": "^13.0.2",
     "expo-dev-client": "~0.8.4",
+    "expo-local-authentication": "~12.1.0",
     "expo-location": "~14.0.1",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
@@ -42,9 +44,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
-    "react-native-webview": "11.15.0",
-    "react-native-youtube-iframe": "^2.2.2",
-    "expo-local-authentication": "~12.1.0"
+    "react-native-webview": "^11.15.0",
+    "react-native-youtube-iframe": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
