--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -9,6 +9,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@apollo/client": "^3.5.10",
     "@expo/vector-icons": "^12.0.5",
     "@react-native-community/datetimepicker": "4.0.0",
