--- a/client-mobile-mamank/package.json
+++ b/client-mobile-mamank/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
@@ -18,6 +19,7 @@
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
     "expo-task-manager": "~10.1.0",
+    "graphql": "^16.3.0",
     "moment": "^2.29.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
