--- a/client-mobile-mamank/package.json
+++ b/client-mobile-mamank/package.json
@@ -25,11 +25,13 @@
     "react-native-gifted-chat": "^0.16.3",
     "react-native-maps": "0.29.4",
     "react-native-maps-directions": "^1.8.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "socket.io-client": "^4.4.1",
-    "twrnc": "^3.2.0"
+    "twrnc": "^3.2.0",
+    "expo-linear-gradient": "~11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
