change docker file

--- a/server/services/mamang/Dockerfile
+++ b/server/services/mamang/Dockerfile
@@ -6,7 +6,7 @@ ENV PORT=4005
 
 ENV URI_MONGO="mongodb+srv://gomank:tukangculik@gomank.0mu6i.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 
-COPY package.json package-lock.json /goMank/server/services/mamang/
+COPY package.json package-lock.json ./
 
 RUN npm install && npm cache clean --force
 
