--- a/server/services/app/package.json
+++ b/server/services/app/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --collectCoverage --detectOpenHandles --forceExit --runInBand"
+    "test": "jest --collectCoverage --detectOpenHandles --forceExit --runInBand",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
