--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -47,7 +47,8 @@
     "react-native-web": "0.17.1",
     "react-native-webview": "^11.15.0",
     "react-native-youtube-iframe": "^2.2.2",
-    "socket.io-client": "^4.4.1"
+    "socket.io-client": "^4.4.1",
+    "expo-barcode-scanner": "~11.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
