--- a/server/orchestrator/package.json
+++ b/server/orchestrator/package.json
@@ -2,7 +2,7 @@
   "name": "orchestrator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
