--- a/test-socket/.env
+++ b/test-socket/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://dzulfiqarzaky:2sGulkifj5FJpoSF@cluster0.zvlbq.mongodb.net/myFirstDatabase
+MONGO_URI='mongodb+srv://dzulfiqarzaky:2sGulkifj5FJpoSF@cluster0.zvlbq.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
