--- a/client-mobile-mamank/package.json
+++ b/client-mobile-mamank/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.6.1",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
+    "expo-linear-gradient": "~11.0.3",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
     "expo-task-manager": "~10.1.0",
@@ -32,8 +33,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "socket.io-client": "^4.4.1",
-    "twrnc": "^3.2.0",
-    "expo-linear-gradient": "~11.0.3"
+    "twrnc": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
