--- a/client-mobile-mamank/app.json
+++ b/client-mobile-mamank/app.json
@@ -16,12 +16,15 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios":  {
+    "ios": {
       "supportsTablet": true,
       "infoPlist": {
         "setGoogleApiKey": "AIzaSyAlqVN_Y9I6JGPrCIgA5LR0iytHX1hIRaY",
         "ITSAppUsesNonExemptEncryption": false,
-        "UIBackgroundModes": ["location", "fetch"],
+        "UIBackgroundModes": [
+          "location",
+          "fetch"
+        ],
         "CFBundleAllowMixedLocalizations": true,
         "NSLocationAlwaysAndWhenInUseUsageDescription": "App requires geolocation to improve the quality of the service",
         "NSLocationAlwaysUsageDescription": "App requires geolocation to improve the quality of the service",
@@ -39,7 +42,13 @@
           "apiKey": "AIzaSyAlqVN_Y9I6JGPrCIgA5LR0iytHX1hIRaY"
         }
       },
-      "permissions": [ "CAMERA", "ACCESS_FINE_LOCATION", "ACCESS_COARSE_LOCATION", "ACCESS_BACKGROUND_LOCATION" ]
+      "permissions": [
+        "CAMERA",
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_BACKGROUND_LOCATION"
+      ],
+      "package": "com.rizalpurwanto.clientmobilemamang"
     },
     "web": {
       "favicon": "./assets/favicon.png"
