--- a/client-mobile-mamank/package.json
+++ b/client-mobile-mamank/package.json
@@ -1,39 +1,39 @@
 {
   "name": "client-mobile-mamang",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "axios": "^0.26.1",
-    "expo": "~44.0.0",
-    "expo-linear-gradient": "~11.0.3",
-    "expo-location": "~14.0.1",
-    "expo-status-bar": "~1.2.0",
-    "expo-task-manager": "~10.1.0",
+    "expo": "^45.0.0",
+    "expo-linear-gradient": "~11.3.0",
+    "expo-location": "~14.2.2",
+    "expo-status-bar": "~1.3.0",
+    "expo-task-manager": "~10.2.1",
     "graphql": "^16.3.0",
     "moment": "^2.29.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-gifted-chat": "^0.16.3",
-    "react-native-maps": "0.29.4",
+    "react-native-maps": "0.30.2",
     "react-native-maps-directions": "^1.8.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-web": "0.17.7",
     "socket.io-client": "^4.4.1",
-    "twrnc": "^3.2.0"
+    "twrnc": "^3.2.0",
+    "expo-splash-screen": "~0.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
